Cinnamon: Fix grouped window list visibility issue

--- a/cinnamon/cinnamon-dark.css
+++ b/cinnamon/cinnamon-dark.css
@@ -1101,7 +1101,7 @@ StScrollBar {
       padding-left: 1px; }
   .grouped-window-list-item-box:active, .grouped-window-list-item-box:checked {
     color: #f7f7f7;
-    border-color: #3f5569; }
+    border-color: #526e89; }
   .grouped-window-list-item-box:hover, .grouped-window-list-item-box:active:hover, .grouped-window-list-item-box:focus, .grouped-window-list-item-box:active:focus, .grouped-window-list-item-box:focus:hover, .grouped-window-list-item-box:active:focus:hover {
     color: #f7f7f7;
     border-color: #00e8b7; }
